<?xml version="1.0" encoding="utf-8"?>
<!--
  Mosaic - Location Based Messaging
  Copyright (C) 2013 Bryan Emmanuel
  
  This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.
   
   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
   
   Bryan Emmanuel piusvelte@gmail.com
-->

<resources>

    <string name="app_name">Mosaic</string>
    <string name="menu_settings">Settings</string>
    <string name="preference_account_name">account_name</string>
    <string name="preference_user_id">user_id</string>
    <string name="no_accounts">Please add a Google account through Settings</string>
    <string name="loading">loading&#8230;</string>
    <string name="signing_in">signing in&#8230;</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="radius">Radius: 0m</string>
    <string name="radius_progress">Radius: %dm</string>
    <string name="report">Report</string>
    <string name="expires">Expires</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>