<?xml version="1.0" encoding="utf-8"?>
<!--
  Mosaic - Location Based Messaging
  Copyright (C) 2013 Bryan Emmanuel
  
  This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.
   
   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
   
   Bryan Emmanuel piusvelte@gmail.com
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/title"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/buttons_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/expiry_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_wrapper" >

        <CheckBox
            android:id="@+id/expires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/expires" />

        <DatePicker
            android:id="@+id/expiry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/expires"
            android:calendarViewShown="false" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/radius_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/expiry_wrapper" >

        <TextView
            android:id="@+id/lbl_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/radius" />

        <SeekBar
            android:id="@+id/radius"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/lbl_radius"
            android:max="100"
            android:progress="0" />
    </RelativeLayout>

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/radius_wrapper"
        android:layout_below="@id/title"
        android:gravity="top"
        android:hint="@string/message" />

</RelativeLayout>