<?xml version="1.0" encoding="utf-8"?>
<!--
  Mosaic - Location Based Messaging
  Copyright (C) 2013 Bryan Emmanuel
  
  This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.
   
   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
   
   Bryan Emmanuel piusvelte@gmail.com
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/title"
        android:singleLine="true" />

    <Button
        android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save" />

    <TextView
        android:id="@+id/lbl_range"
        android:text="@string/range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/save"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:id="@+id/range"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:layout_toRightOf="@id/lbl_range"
        android:layout_above="@id/save"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/save"
        android:layout_below="@id/title"
        android:gravity="top"
        android:hint="@string/message" />

</RelativeLayout>